--- a/layout_demo/5xruby/style1.css
+++ b/layout_demo/5xruby/style1.css
@@ -19,7 +19,8 @@ header .logo img {
   width: 100px;
   height: 24px;
   vertical-align: middle;
-  /* .logo 的 img 和 span 高度不一致 */
+  /* ! .logo 的 img 和 span 高度不一致 */
+  border: 1px solid red;
 }
 header .logo span {
   color: #f35;
