--- a/layout_demo/5xruby/style4.css
+++ b/layout_demo/5xruby/style4.css
@@ -1,54 +1,128 @@
 a {
   text-decoration: none;
 }
+
+
 header {
-  padding: 20px 20px 20px 30px;
-  /* position: fixed; */
-  /* ! 忘記加上 fixed，可是補上後版面會跑掉，先留著晚點處理 */
-  /* background-color: #aaa; */
+  padding: 20px 0;
+  /* * 補上 fixed 設定 */
+  position: fixed;
+  width: 100%;
+  height: 40px;
+  /* margin: auto 0; */
+  background-color: #fff;
+  z-index: 2;
+  /* * 發現課程做了特效之後會蓋住 header，所以把 header 的 z-index 拉高 */
+  /* border: 1px solid #f00; */
 }
 header .header-container {
+  width: 1200px;
+  height: 100%;
+  margin: auto;
   display: flex;
   justify-content: space-between;
+  /* ? 不知道為什麼右邊那一欄會跑到畫面外，先加上 padding 讓他回來 */
+  /* padding-right: 50px; */
   /* border: 1px solid red; */
 }
 header .logo {
-  font-size: 16px;
-  line-height: 24px;
+  height: 100%;
+  /* line-height: 100%; */
+  font-size: 0;
   /* border: 1px solid red; */
-  align-self: center;
+  /* align-self: center; */
+  margin-left: 30px;
 }
 header .logo img {
-  width: 90px;
-  height: 24px;
-  vertical-align: bottom;
+  width: 100px;
+  height: 25px;
+  padding-bottom: 12px;
+  /* max-width: 90%; */
+  /* max-height: 100%; */
+  vertical-align: middle;
   /* .logo 的 img 和 span 高度不一致 */
   /* * middle 改成 bottom 高度一致了 */
 }
-header .logo span {
+/* * 發現將 img 用 div 包起來再設定尺寸比較不會跑版 */
+header .logo .pic {
+  display: inline-block;
+  width: 110px;
+  height: 40px;
+  /* border: 1px solid #f00; */
+}
+header .logo p {
+  line-height: 40px;
+  font-size: 16px;
+  display: inline-block;
   color: #d90845;
+}
+header nav {
+  /* border: 1px solid #f00; */
+  height: 40px;
+  margin-right: 20px;
 }
 header nav ul {
   font-size: 0;
 }
 header nav li {
-  height: 24px;
+  height: 100%;
   display: inline-block;
-  margin: 0 10px;
   /* background-color: #fa0; */
 }
+header nav li + li {
+  margin: 0 10px;
+}
 header nav a {
-  color: #333;
+  color: #888;
   font-size: 16px;
-  line-height: 24px;
+  line-height: 40px;
   font-style: bold;
+}
+header nav li:nth-child(1)::before {
+  line-height: 20px;
+  content: url("images/app-21-diamond-128.png");
+  vertical-align: middle;
+  /* background-color: #fa0; */
+}
+header nav li:nth-child(2)::before {
+  line-height: 20px;
+  content: url("images/TWalsh__navigate_explore-128.png");
+  vertical-align: middle;
+}
+header nav li:nth-child(3)::before {
+  line-height: 20px;
+  content: url("images/weather-02-128.png");
+  vertical-align: middle;
+}
+header nav li:nth-child(3)::after {
+  content: url("images/new-301d86be.svg");
+  animation: bouncing 0.8s linear infinite;
+  position: relative;
 }
 header nav a:hover {
   color: #d90845;
 }
 
+@keyframes bouncing {
+  0% {
+    /* transform: translateY(0); */
+    /* * 用 transform 更改 Y 軸設定沒有反應，改成直接用 position 設定 */
+    top: 0;
+  }
+  50% {
+    /* transform: translateY(-5px); */
+    top: -5px;
+  }
+  100% {
+    /* transform: translateY(0); */
+    top: 0;
+  }
+}
 
 
+.banner .space {
+  height: 60px;
+}
 .banner img {
   width: 100%;
   vertical-align: bottom;
@@ -129,6 +203,7 @@ header nav a:hover {
   margin: 0 30px;
   border: 1px solid #ccc;
   box-sizing: border-box;
+  transition: 0.3s;
 }
 .lesson .item img {
   width: 100%;
@@ -187,8 +262,16 @@ header nav a:hover {
   text-align: center;
   border-radius: 5px;
   margin: 75px auto 20px;
+  transition: 0.5s;
 }
-/* TODO: 課程特效 */
+
+.lesson .item:hover {
+  transform: translateY(-8px);
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19);;
+}
+.lesson .more:hover {
+  background-color: #c00845;
+}
 
 
 
@@ -323,6 +406,19 @@ header nav a:hover {
 .footer .footer-about p {
   margin: 15px 0;
 }
+.footer .footer-about p:nth-child(2)::before {
+  /* background-color: #f00; */
+  content: url("images/phone-128.png");
+  vertical-align: bottom;
+}
+.footer .footer-about p:nth-child(3)::before {
+  content: url("images/email.png");
+  vertical-align: bottom;
+}
+.footer .footer-about p:nth-child(4)::before {
+  content: url("images/pin_maker-1.png");
+  vertical-align: bottom;
+}
 .footer .item-group {
   width: 65%;
   /* flex-grow: 3; */
@@ -344,6 +440,23 @@ header nav a:hover {
 .footer .item li a {
   color: #888;
 }
+.footer .social li:nth-child(1)::before {
+  /* background-color: #f00; */
+  content: url("images/iconfinder_Facebook_Button_174544.png");
+  vertical-align: middle;
+}
+.footer .social li:nth-child(2)::before {
+  content: url("images/iconfinder_social_media_social_media_logo_github_2993771.png");
+  vertical-align: middle;
+}
+.footer .social li:nth-child(3)::before {
+  content: url("images/iconfinder_5383_-_Line_1314194.png");
+  vertical-align: middle;
+}
+.footer .social li:nth-child(4)::before {
+  content: url("images/iconfinder_TWITTER_1217163.png");
+  vertical-align: middle;
+}
 
 .footer .copyright {
   border-top: 1px solid #ccc;
@@ -352,4 +465,60 @@ header nav a:hover {
   font-size: 13px;
   padding-top: 20px;
   margin: 0 30px;
+}
+
+
+
+.sticky .chat {
+  position: fixed;
+  bottom: 80px;
+  right: 20px;
+}
+.sticky .top {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+}
+
+
+
+.time {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 3;
+}
+.time .content {
+  width: 50%;
+  height: 50%;
+  /* width: 600px; */
+  /* height: 400px; */
+  background-color: #000;
+  color: #fff;
+  text-align: center;
+  line-height: 400px;
+  font-size: 50px;
+  position: absolute;
+  top: 0px;
+  bottom: 0px;
+  left: 0px;
+  right: 0px;
+  margin: auto;
+  border-radius: 10px;
+}
+.time .btn-close {
+  width: 50px;
+  height: 50px;
+  background-color: #fa0;
+  color: #000;
+  position: absolute;
+  top: -5px;
+  right: -5px;
+  line-height: 50px;
+  border-radius: 20%;
+  border: 5px solid #f50;
+  font-size: 40px;
 }
