--- a/layout_demo/5xruby_v2/css/grid.css
+++ b/layout_demo/5xruby_v2/css/grid.css
@@ -2,11 +2,13 @@
   margin: 0 -15px;
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
 }
 
 [class^="col-"] {
   padding: 0 15px;
   box-sizing: border-box;
+  /* margin: 0 auto; */
 }
 
 .col-1  { width: 8.333333%;  }
