--- a/layout_demo/0720_layout/credit/style.css
+++ b/layout_demo/0720_layout/credit/style.css
@@ -4,7 +4,7 @@
   list-style: none;
 }
 
-.container {
+.container, footer, .gap {
   padding: 0 10px;
   width: 100%;
   max-width: 1000px;
@@ -149,6 +149,14 @@ a {
   color: #09f;
   font-weight: 700;
 }
+.text .full {
+  background-color: #cd2f2a;
+  color: #fff;
+  border-radius: 5px;
+  padding: 0 5px;
+  vertical-align: top;
+  font-size: 14px;
+}
 .footer {
   background-color: #e8e8e8;
   /* margin-bottom: -15px; */
@@ -177,6 +185,28 @@ a {
   text-decoration: underline;
 }
 
+.gap {
+  margin-top: 16px;
+  padding-bottom: 20px;
+  background-color: #ccc;
+}
+footer {
+  color: #fff;
+  background-color: #ccc;
+  /* padding-top: 15px; */
+  padding-bottom: 5px;
+  margin-top: 1px;
+}
+footer .careful {
+  display: flex;
+  justify-content: center;
+}
+footer h1:first-child {
+  margin-right: 10px;
+}
+footer h1:last-child {
+  margin-left: 10px;
+}
 
 
 @media screen and (max-width: 767px) {
@@ -199,6 +229,9 @@ a {
   }
   .container + .container {
     margin-top: -5px;
+  }
+  .gap {
+    margin-top: 1px;
   }
 }
 
@@ -233,5 +266,8 @@ a {
   }
   .tag .col-lg-3:first-child a {
     color: #3d3a3a;
+  }
+  footer h1 {
+    font-size: 40px;
   }
 }
