--- a/layout_demo/5xruby_bs/css/style.css
+++ b/layout_demo/5xruby_bs/css/style.css
@@ -17,6 +17,11 @@ body {
   top: 0;
 } */
 
+h1 {
+  position: fixed;
+  top: -100px;
+}
+
 nav .logo-pic {
   width: 90px;
   height: 25px;
@@ -78,7 +83,8 @@ nav ul li a:hover {
   color: #dc3545 !important;
 }
 nav .bouncing {
-  animation: bouncing 1s linear infinite;
+  display: inline-block !important;
+  animation: bouncing 0.8s linear infinite alternate;
   position: relative;
   left: -2px;
 }
@@ -88,13 +94,15 @@ nav .bouncing img {
 
 @keyframes bouncing {
   0% {
-    top: -5px;
+    /* top: -5px; */
+    transform: translateY(-5px);
   }
-  50% {
+  /* 50% {
     top: -10px;
-  }
+  } */
   100% {
-    top: -5px;
+    /* top: -5px; */
+    transform: translateY(-10px);
   }
 }
 
@@ -166,6 +174,11 @@ section.know .text p {
   font-size: 18px;
   line-height: 2;
 }
+.know .social-btn a,
+.know .social-btn a img {
+  /* outline: 1px solid blue; */
+  border-radius: 50%;
+}
 
 section.avatar .text-area  {
   height: 320px;
@@ -176,9 +189,18 @@ footer .footer-pic img {
 }
 footer li {
   font-size: 14px;
+  vertical-align: middle;
 }
-footer i {
+footer .icon-font {
+  /* outline: 1px solid blue; */
+  display: inline-block;
+  width: 1em;
+  text-align: center;
   font-size: 18px;
+  vertical-align: middle;
+}
+footer .icon-font i {
+  margin: 0 !important;
 }
 .foot-log li:last-child i {
   /* outline: 1px solid #faa; */
@@ -199,6 +221,34 @@ footer ul li a:hover {
 
 .copyright {
   font-size: 12px;
+}
+
+
+
+.sticker .msg,
+.sticker .to-top {
+  /* outline: 1px solid #faa; */
+  position: fixed;
+  right: 20px;
+}
+.sticker .msg {
+  bottom: 80px;
+  background-color: #d90845;
+  width: 60px;
+  line-height: 60px;
+  font-size: 40px;
+}
+.sticker .to-top {
+  /* height: 40px; */
+  line-height: 40px;
+  font-size: 20px;
+  width: 40px;
+  bottom: 20px;
+  color: #d90845;
+}
+.sticker a.msg:hover {
+  /* background-color: #afa; */
+  box-shadow: 0 0.25rem 2rem rgba(0,0,0, 0.25) !important;
 }
 
 
